# ovi-voice-assistant

./: .env  .gitignore  CLAUDE.md  README.md  agents.json  mcp.json  pyproject.toml
.claude/agents/: lint.md  test.md
docs/: ble-server-spec.md
esphome/: atom-echo.yaml  crowpanel-9.yaml  crowpanel-s3-5.yaml  s3-box-3.yaml  secrets.yaml  voice-pe-ble.yaml  voice-pe.yaml
esphome/components/ovi_audio_codec/: __init__.py  audio_codec.cpp  audio_codec.h
esphome/components/ovi_voice_assistant/: __init__.py  ovi_voice_assistant.cpp  ovi_voice_assistant.h
esphome/custom_wake_word/: hey_ovi.json  hey_ovi.tflite
src/open_voice_assistant/: __init__.py  __main__.py  config.py  device.py  device_manager.py  discovery.py  voice_assistant.py  voice_assistant_pipeline.py
src/open_voice_assistant/agent/: assistant.py  assistant_context.py  tools.py
src/open_voice_assistant/stt/: __init__.py  whisper_stt.py
src/open_voice_assistant/tts/: __init__.py  piper_tts.py  pocket_tts.py
src/ovi_voice_assistant/: __init__.py  __main__.py  config.py  config_test.py  device_connection.py  device_connection_test.py  device_manager.py  device_manager_test.py  discovery.py  flash.py  flash_test.py  pipeline_output.py  scheduler.py  scheduler_test.py  setup.py  setup_test.py  speech_queue.py  speech_queue_test.py  voice_assistant.py  voice_assistant_test.py
src/ovi_voice_assistant/agent/: assistant.py  assistant_context.py  assistant_context_test.py  tools.py  tools_test.py
src/ovi_voice_assistant/codec/: __init__.py  __init___test.py  audio_codec.py  lc3.py  lc3_test.py  opus.py  opus_test.py  pcm.py  pcm_test.py
src/ovi_voice_assistant/memory/: __init__.py  embedder.py  memory.py  memory_test.py  recall.py  recall_test.py  retain.py  retain_test.py  store.py  store_test.py  types.py
src/ovi_voice_assistant/music/: __init__.py  apple.py  browser_music.py  music_group.py  music_player.py  spotify.py  youtube.py
src/ovi_voice_assistant/stt/: __init__.py  nemotron_stt.py  nemotron_stt_test.py  stt.py  whisper_stt.py  whisper_stt_test.py
src/ovi_voice_assistant/transport/: __init__.py  __init___test.py  ble.py  device_transport.py  wifi.py  wifi_test.py
src/ovi_voice_assistant/tts/: __init__.py  __init___test.py  kokoro_tts.py  piper_tts.py  piper_tts_test.py  pocket_tts.py  qwen3_tts.py  qwen3_tts_test.py  tts.py
src/ovi_voice_assistant/tts/qwen3/: __init__.py  audio_utils.py  quantize.py  qwen3_inferencer.py
tests/: pipeline_benchmark_test.py
